<resources>
    <string name="app_name">Airline Reservation System</string>
    <string name="btn_01">01</string>
    <string name="btn_02">02</string>
    <string name="btn_03">03</string>
    <string name="btn_04">04</string>
    <string name="btn_05">05</string>
    <string name="btn_06">06</string>
    <string name="btn_07">07</string>
    <string name="btn_08">08</string>
    <string name="btn_09">09</string>
    <string name="btn_10">10</string>
    <string name="economy">Economy</string>
    <string name="first_class">First Class</string>
    <string name="reset">Reset</string>
</resources>
