<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.problem2_airline_reservation_system.MainActivity">

    <ImageView
        android:id="@+id/imageAirplane"
        android:layout_width="345dp"
        android:layout_height="116dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/plane"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription=""
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_02"
        app:layout_constraintLeft_toRightOf="@+id/btn1"
        app:layout_constraintRight_toLeftOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_03"
        app:layout_constraintRight_toLeftOf="@+id/btn4"
        app:layout_constraintLeft_toRightOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_04"
        app:layout_constraintLeft_toRightOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn5"
        app:layout_constraintRight_toLeftOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_05"
        app:layout_constraintLeft_toRightOf="@+id/btn4"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_06"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/btn7" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_07"
        app:layout_constraintTop_toTopOf="@+id/btn6"
        app:layout_constraintRight_toLeftOf="@+id/btn8"
        app:layout_constraintLeft_toRightOf="@+id/btn6" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_08"
        app:layout_constraintTop_toTopOf="@+id/btn7"
        app:layout_constraintRight_toLeftOf="@+id/btn9"
        app:layout_constraintLeft_toRightOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_09"
        app:layout_constraintTop_toTopOf="@+id/btn8"
        app:layout_constraintRight_toLeftOf="@+id/btn10"
        app:layout_constraintLeft_toRightOf="@+id/btn8" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btn_10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn9"
        app:layout_constraintLeft_toRightOf="@+id/btn9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <Button
        android:id="@+id/btnFirstClass"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:text="@string/first_class"
        app:layout_constraintBottom_toTopOf="@+id/btnEconomy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnEconomy"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/economy"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@+id/btnFirstClass"
        app:layout_constraintLeft_toLeftOf="@+id/btnFirstClass" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toLeftOf="@+id/btnEconomy"
        app:layout_constraintTop_toBottomOf="@+id/btnEconomy" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="365dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.516" />

</android.support.constraint.ConstraintLayout>
